--- a/container-manager/src/main/resources/application.properties
+++ b/container-manager/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 server.port=${CONTAINER_MANAGER_PORT:8081}
 spring.application.name=container-manager
 base.station.image=prod:latest
-docker.network=bridge
-kafka.broker=172.17.0.1:9092
-mysql.host=mysql-host
+docker.network=kafka_default
+kafka.broker=kafka:9092
+mysql.host=mysql
 mysql.port=3306
-mysql.db=mydb
-mysql.user=myuser
-mysql.password=mypassword
-
+mysql.db=TAP
+mysql.user=root
+mysql.password=Pa55word!
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
