--- a/container-manager/pom.xml
+++ b/container-manager/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
         <!-- Docker Java Core, excluding Jersey transport -->
         <dependency>
@@ -41,7 +45,13 @@
             <groupId>com.github.docker-java</groupId>
             <artifactId>docker-java-transport-httpclient5</artifactId>
             <version>3.3.6</version>
-        </dependency>
+    </dependency>
+    <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <scope>runtime</scope>
+</dependency>
+
     </dependencies>
 
     <build>
