--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -4,10 +4,10 @@
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion>
 <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.5</version> <!-- or latest -->
-    <relativePath/> <!-- lookup parent from Maven Central -->
+  <groupId>com.example</groupId>
+  <artifactId>TAP</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <relativePath>../pom.xml</relativePath>
 </parent>
 
   <artifactId>consumer</artifactId>
