--- a/producer/pom.xml
+++ b/producer/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  	<parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.5</version> <!-- or latest -->
-    <relativePath/> <!-- lookup parent from Maven Central -->
-</parent>
+  <parent>
+    <groupId>com.example</groupId>
+    <artifactId>TAP</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
 
   <artifactId>producer</artifactId>
   <dependencies>
