--- a/container-manager/src/main/resources/application-prod.properties
+++ b/container-manager/src/main/resources/application-prod.properties
@@ -1,17 +1,17 @@
-server.port=${CONTAINER_MANAGER_PORT:8081}
+server.port=8080
 spring.application.name=container-manager
 base.station.image=prod:latest
 docker.network=kafka_default
 kafka.broker=kafka:9092
-mysql.host=docker.host.internal
+mysql.host=host.docker.internal
 mysql.port=3306
 mysql.db=TAP
 mysql.user=root
-mysql.password=Pa55word!
+mysql.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=jdbc:mysql://docker.host.internal:3306/TAP
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/TAP
 spring.datasource.username=root
-spring.datasource.password=Pa55word!
+spring.datasource.password=root
