--- a/container-manager/src/main/resources/application-prod.properties
+++ b/container-manager/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.application.name=container-manager
 base.station.image=prod:latest
-docker.network=kafka_default
+docker.network=tap_network
 kafka.broker=kafka:9092
 mysql.host=host.docker.internal
 mysql.port=3306
